rename to avoid conflict

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ var fig_bratvis = {
 
         head.ready(function () {
             // bind to local variable
-            fig_bratvis.util = Util;
+            fig_bratvis.util = BratUtil;
         });
     },
 
