--- a/index.html
+++ b/index.html
@@ -43,22 +43,24 @@ var collData = {
         type: 'Certainty',
         values: {
             'Positive': {
-                glyph: '+',
-                glyphColor: 'red'
+                glyph: '➕',
+                glyphColor: 'red',
+                // dashArray: '3,3'
             },
             'Negative': {
-                glyph: '-',
-                glyphColor: 'blue'
+                glyph: '➖',
+                glyphColor: 'green',
+                // box: 'crossed'
             }
         }
     }, {
         type: 'Status',
         values: {
             'Present': {
-                glyph: 'Prs',
+                glyph: 'Ⓟ',
             },
             'HistoryOf': {
-                glyph: 'His'
+                glyph: 'Ⓗ'
             }
         }
     }],
