try add text in spans

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@ var docData = {
     entities : [
         /* Format: [${ID}, ${TYPE}, [[${START}, ${END}]]]
             note that range of the offsets are [${START},${END}) */
-        ['T1', 'Person', [[0, 11]] ],
+        ['T1', 'Person', [[0, 11]], "Ed O'Kelley" ],
         ['T2', 'Person', [[20, 23]] ],
         ['T3', 'Person', [[37, 40]] ],
-        ['T4', 'Person', [[50, 61]] ],
+        ['T4', 'Person', [[50, 61]], "Jesse James" ],
         // more
         ['T8', 'Person', [[78, 82]] ],
         ['T9', 'Person', [[90, 93]] ],
